Source/backend/expr_parser/rulesParser.py
# Generated from rules.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class rulesParser ( Parser ):

    grammarFileName = "rules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'~'", "'!'", "'&&'", "'||'", "<INVALID>", 
                     "'pow'", "'exp'", "'cos'", "'sinh'", "'cosh'", "'tanh'", 
                     "'sin'", "'tan'", "'cot'", "'sec'", "'csc'", "'acos'", 
                     "'asin'", "'atan'", "'ln'", "'log'", "'sqrt'", "'cbrt'", 
                     "'gamma'", "'bnl'", "'sum'", "'abs'", "'fac'", "'get_arc'", 
                     "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'>'", "'>='", 
                     "'<'", "'<='", "'='", "'!='", "','", "':'", "';'", 
                     "'.'", "<INVALID>", "'pi'", "'r'", "'I'", "'->'", "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SUCCCOUNT", "POWF", "EXP", "COS", "SINH", 
                      "COSH", "TANH", "SIN", "TAN", "COT", "SEC", "CSC", 
                      "ACOS", "ASIN", "ATAN", "LN", "LOG", "SQRT", "CBRT", 
                      "GAMMA", "BERNOULLI", "SUM", "ABS", "FACTORIAL", "GET_ARC", 
                      "LPAREN", "RPAREN", "PLUS", "MINUS", "TIMES", "DIV", 
                      "GT", "GTE", "LT", "LTE", "EQ", "NEQ", "COMMA", "COLON", 
                      "SEMICOLON", "POINT", "POW", "PI", "EULER", "I", "ARROW", 
                      "AT", "VARIABLE", "SCIENTIFIC_NUMBER", "WhiteSpace", 
                      "LineComment" ]

    RULE_rules = 0
    RULE_singleRule = 1
    RULE_constraint = 2
    RULE_equation = 3
    RULE_expression = 4
    RULE_multiplyingExpression = 5
    RULE_powExpression = 6
    RULE_signedAtom = 7
    RULE_atom = 8
    RULE_scientific = 9
    RULE_constant = 10
    RULE_variable = 11
    RULE_func = 12
    RULE_funcname = 13
    RULE_relop = 14

    ruleNames =  [ "rules", "singleRule", "constraint", "equation", "expression", 
                   "multiplyingExpression", "powExpression", "signedAtom", 
                   "atom", "scientific", "constant", "variable", "func", 
                   "funcname", "relop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    SUCCCOUNT=5
    POWF=6
    EXP=7
    COS=8
    SINH=9
    COSH=10
    TANH=11
    SIN=12
    TAN=13
    COT=14
    SEC=15
    CSC=16
    ACOS=17
    ASIN=18
    ATAN=19
    LN=20
    LOG=21
    SQRT=22
    CBRT=23
    GAMMA=24
    BERNOULLI=25
    SUM=26
    ABS=27
    FACTORIAL=28
    GET_ARC=29
    LPAREN=30
    RPAREN=31
    PLUS=32
    MINUS=33
    TIMES=34
    DIV=35
    GT=36
    GTE=37
    LT=38
    LTE=39
    EQ=40
    NEQ=41
    COMMA=42
    COLON=43
    SEMICOLON=44
    POINT=45
    POW=46
    PI=47
    EULER=48
    I=49
    ARROW=50
    AT=51
    VARIABLE=52
    SCIENTIFIC_NUMBER=53
    WhiteSpace=54
    LineComment=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RulesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.SingleRuleContext)
            else:
                return self.getTypedRuleContext(rulesParser.SingleRuleContext,i)


        def getRuleIndex(self):
            return rulesParser.RULE_rules

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRules" ):
                listener.enterRules(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRules" ):
                listener.exitRules(self)




    def rules(self):

        localctx = rulesParser.RulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==rulesParser.VARIABLE:
                self.state = 30
                self.singleRule()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SingleRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(rulesParser.VariableContext,0)


        def COLON(self):
            return self.getToken(rulesParser.COLON, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(rulesParser.ExpressionContext,i)


        def ARROW(self):
            return self.getToken(rulesParser.ARROW, 0)

        def AT(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.AT)
            else:
                return self.getToken(rulesParser.AT, i)

        def SUCCCOUNT(self):
            return self.getToken(rulesParser.SUCCCOUNT, 0)

        def SEMICOLON(self):
            return self.getToken(rulesParser.SEMICOLON, 0)

        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(rulesParser.ConstraintContext,i)


        def getRuleIndex(self):
            return rulesParser.RULE_singleRule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleRule" ):
                listener.enterSingleRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleRule" ):
                listener.exitSingleRule(self)




    def singleRule(self):

        localctx = rulesParser.SingleRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_singleRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.variable()
            self.state = 37
            self.match(rulesParser.COLON)
            self.state = 38
            self.expression(0)
            self.state = 39
            self.match(rulesParser.ARROW)
            self.state = 40
            self.expression(0)
            self.state = 41
            self.match(rulesParser.AT)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.T__0) | (1 << rulesParser.T__1) | (1 << rulesParser.POWF) | (1 << rulesParser.EXP) | (1 << rulesParser.COS) | (1 << rulesParser.SINH) | (1 << rulesParser.COSH) | (1 << rulesParser.TANH) | (1 << rulesParser.SIN) | (1 << rulesParser.TAN) | (1 << rulesParser.COT) | (1 << rulesParser.SEC) | (1 << rulesParser.CSC) | (1 << rulesParser.ACOS) | (1 << rulesParser.ASIN) | (1 << rulesParser.ATAN) | (1 << rulesParser.LN) | (1 << rulesParser.LOG) | (1 << rulesParser.SQRT) | (1 << rulesParser.CBRT) | (1 << rulesParser.GAMMA) | (1 << rulesParser.BERNOULLI) | (1 << rulesParser.SUM) | (1 << rulesParser.ABS) | (1 << rulesParser.FACTORIAL) | (1 << rulesParser.GET_ARC) | (1 << rulesParser.LPAREN) | (1 << rulesParser.PLUS) | (1 << rulesParser.MINUS) | (1 << rulesParser.PI) | (1 << rulesParser.EULER) | (1 << rulesParser.I) | (1 << rulesParser.VARIABLE) | (1 << rulesParser.SCIENTIFIC_NUMBER))) != 0):
                self.state = 42
                self.constraint(0)


            self.state = 45
            self.match(rulesParser.AT)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rulesParser.T__0) | (1 << rulesParser.T__1) | (1 << rulesParser.POWF) | (1 << rulesParser.EXP) | (1 << rulesParser.COS) | (1 << rulesParser.SINH) | (1 << rulesParser.COSH) | (1 << rulesParser.TANH) | (1 << rulesParser.SIN) | (1 << rulesParser.TAN) | (1 << rulesParser.COT) | (1 << rulesParser.SEC) | (1 << rulesParser.CSC) | (1 << rulesParser.ACOS) | (1 << rulesParser.ASIN) | (1 << rulesParser.ATAN) | (1 << rulesParser.LN) | (1 << rulesParser.LOG) | (1 << rulesParser.SQRT) | (1 << rulesParser.CBRT) | (1 << rulesParser.GAMMA) | (1 << rulesParser.BERNOULLI) | (1 << rulesParser.SUM) | (1 << rulesParser.ABS) | (1 << rulesParser.FACTORIAL) | (1 << rulesParser.GET_ARC) | (1 << rulesParser.LPAREN) | (1 << rulesParser.PLUS) | (1 << rulesParser.MINUS) | (1 << rulesParser.PI) | (1 << rulesParser.EULER) | (1 << rulesParser.I) | (1 << rulesParser.VARIABLE) | (1 << rulesParser.SCIENTIFIC_NUMBER))) != 0):
                self.state = 46
                self.constraint(0)


            self.state = 49
            self.match(rulesParser.AT)
            self.state = 50
            self.match(rulesParser.SUCCCOUNT)
            self.state = 51
            self.match(rulesParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstraintContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.prefix = None # Token
            self.bop = None # Token

        def equation(self):
            return self.getTypedRuleContext(rulesParser.EquationContext,0)


        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(rulesParser.ConstraintContext,i)


        def getRuleIndex(self):
            return rulesParser.RULE_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint" ):
                listener.enterConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint" ):
                listener.exitConstraint(self)



    def constraint(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = rulesParser.ConstraintContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_constraint, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rulesParser.POWF, rulesParser.EXP, rulesParser.COS, rulesParser.SINH, rulesParser.COSH, rulesParser.TANH, rulesParser.SIN, rulesParser.TAN, rulesParser.COT, rulesParser.SEC, rulesParser.CSC, rulesParser.ACOS, rulesParser.ASIN, rulesParser.ATAN, rulesParser.LN, rulesParser.LOG, rulesParser.SQRT, rulesParser.CBRT, rulesParser.GAMMA, rulesParser.BERNOULLI, rulesParser.SUM, rulesParser.ABS, rulesParser.FACTORIAL, rulesParser.GET_ARC, rulesParser.LPAREN, rulesParser.PLUS, rulesParser.MINUS, rulesParser.PI, rulesParser.EULER, rulesParser.I, rulesParser.VARIABLE, rulesParser.SCIENTIFIC_NUMBER]:
                self.state = 54
                self.equation()
                pass
            elif token in [rulesParser.T__0, rulesParser.T__1]:
                self.state = 55
                localctx.prefix = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==rulesParser.T__0 or _la==rulesParser.T__1):
                    localctx.prefix = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 56
                self.constraint(3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 65
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = rulesParser.ConstraintContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_constraint)
                        self.state = 59
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 60
                        localctx.bop = self.match(rulesParser.T__2)
                        self.state = 61
                        self.constraint(3)
                        pass

                    elif la_ == 2:
                        localctx = rulesParser.ConstraintContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_constraint)
                        self.state = 62
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 63
                        localctx.bop = self.match(rulesParser.T__3)
                        self.state = 64
                        self.constraint(2)
                        pass

             
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class EquationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(rulesParser.ExpressionContext,i)


        def relop(self):
            return self.getTypedRuleContext(rulesParser.RelopContext,0)


        def getRuleIndex(self):
            return rulesParser.RULE_equation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquation" ):
                listener.enterEquation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquation" ):
                listener.exitEquation(self)




    def equation(self):

        localctx = rulesParser.EquationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_equation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.expression(0)
            self.state = 71
            self.relop()
            self.state = 72
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplyingExpression(self):
            return self.getTypedRuleContext(rulesParser.MultiplyingExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(rulesParser.ExpressionContext,0)


        def PLUS(self):
            return self.getToken(rulesParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(rulesParser.MINUS, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = rulesParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.multiplyingExpression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = rulesParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 77
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 78
                    _la = self._input.LA(1)
                    if not(_la==rulesParser.PLUS or _la==rulesParser.MINUS):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 79
                    self.multiplyingExpression(0) 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class MultiplyingExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def powExpression(self):
            return self.getTypedRuleContext(rulesParser.PowExpressionContext,0)


        def multiplyingExpression(self):
            return self.getTypedRuleContext(rulesParser.MultiplyingExpressionContext,0)


        def TIMES(self):
            return self.getToken(rulesParser.TIMES, 0)

        def DIV(self):
            return self.getToken(rulesParser.DIV, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_multiplyingExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplyingExpression" ):
                listener.enterMultiplyingExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplyingExpression" ):
                listener.exitMultiplyingExpression(self)



    def multiplyingExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = rulesParser.MultiplyingExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_multiplyingExpression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.powExpression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = rulesParser.MultiplyingExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplyingExpression)
                    self.state = 88
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 89
                    _la = self._input.LA(1)
                    if not(_la==rulesParser.TIMES or _la==rulesParser.DIV):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 90
                    self.powExpression() 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PowExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signedAtom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rulesParser.SignedAtomContext)
            else:
                return self.getTypedRuleContext(rulesParser.SignedAtomContext,i)


        def POW(self, i:int=None):
            if i is None:
                return self.getTokens(rulesParser.POW)
            else:
                return self.getToken(rulesParser.POW, i)

        def getRuleIndex(self):
            return rulesParser.RULE_powExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPowExpression" ):
                listener.enterPowExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPowExpression" ):
                listener.exitPowExpression(self)




    def powExpression(self):

        localctx = rulesParser.PowExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_powExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.signedAtom()
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 97
                    self.match(rulesParser.POW)
                    self.state = 98
                    self.signedAtom() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignedAtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(rulesParser.PLUS, 0)

        def signedAtom(self):
            return self.getTypedRuleContext(rulesParser.SignedAtomContext,0)


        def MINUS(self):
            return self.getToken(rulesParser.MINUS, 0)

        def func(self):
            return self.getTypedRuleContext(rulesParser.FuncContext,0)


        def atom(self):
            return self.getTypedRuleContext(rulesParser.AtomContext,0)


        def getRuleIndex(self):
            return rulesParser.RULE_signedAtom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignedAtom" ):
                listener.enterSignedAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignedAtom" ):
                listener.exitSignedAtom(self)




    def signedAtom(self):

        localctx = rulesParser.SignedAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_signedAtom)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rulesParser.PLUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(rulesParser.PLUS)
                self.state = 105
                self.signedAtom()
                pass
            elif token in [rulesParser.MINUS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(rulesParser.MINUS)
                self.state = 107
                self.signedAtom()
                pass
            elif token in [rulesParser.POWF, rulesParser.EXP, rulesParser.COS, rulesParser.SINH, rulesParser.COSH, rulesParser.TANH, rulesParser.SIN, rulesParser.TAN, rulesParser.COT, rulesParser.SEC, rulesParser.CSC, rulesParser.ACOS, rulesParser.ASIN, rulesParser.ATAN, rulesParser.LN, rulesParser.LOG, rulesParser.SQRT, rulesParser.CBRT, rulesParser.GAMMA, rulesParser.BERNOULLI, rulesParser.SUM, rulesParser.ABS, rulesParser.FACTORIAL, rulesParser.GET_ARC]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.func()
                pass
            elif token in [rulesParser.LPAREN, rulesParser.PI, rulesParser.EULER, rulesParser.I, rulesParser.VARIABLE, rulesParser.SCIENTIFIC_NUMBER]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.atom()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(rulesParser.ScientificContext,0)


        def variable(self):
            return self.getTypedRuleContext(rulesParser.VariableContext,0)


        def constant(self):
            return self.getTypedRuleContext(rulesParser.ConstantContext,0)


        def LPAREN(self):
            return self.getToken(rulesParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(rulesParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(rulesParser.RPAREN, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)




    def atom(self):

        localctx = rulesParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atom)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rulesParser.SCIENTIFIC_NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.scientific()
                pass
            elif token in [rulesParser.VARIABLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.variable()
                pass
            elif token in [rulesParser.PI, rulesParser.EULER, rulesParser.I]:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.constant()
                pass
            elif token in [rulesParser.LPAREN]:
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.match(rulesParser.LPAREN)
                self.state = 116
                self.expression(0)
                self.state = 117
                self.match(rulesParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScientificContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCIENTIFIC_NUMBER(self):
            return self.getToken(rulesParser.SCIENTIFIC_NUMBER, 0)

        def getRuleIndex(self):
            return rulesParser.RULE_scientific

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScientific" ):
                listener.enterScientific(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScientific" ):
                listener.exitScientific(self)




    def scientific(self):

        localctx = rulesParser.ScientificContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_scientific)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(rulesParser.SCIENTIFIC_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PI(self):
            return self.getToken(rulesParser.PI, 0)
